// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SalaireTempsPartiel /> should add a period 1`] = `
.c10 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c12 {
  margin: 1.25rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 1.25rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 1.25rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 8em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c9 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c11 {
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value=""
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value=""
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        class="c10 c11"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    class="c10 c12"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;

exports[`<SalaireTempsPartiel /> should delete a period 1`] = `
.c10 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c12 {
  margin: 1.25rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 1.25rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 1.25rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 8em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c9 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c11 {
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value="6"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        class="c10 c11"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    class="c10 c12"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;

exports[`<SalaireTempsPartiel /> should render 1`] = `
.c10 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c12 {
  margin: 1.25rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 1.25rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 1.25rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 8em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c9 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c11 {
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value="12"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value="2000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        class="c10 c11"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[1].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[1].duration"
        size="8"
        type="number"
        value="6"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[1].salary"
          size="10"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        class="c10 c11"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    class="c10 c12"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;
